--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <p>张睿、张琪、陆俊伶是我的室友！</p>
 
 <ul>
-  <li> <a https://tse4-mm.cn.bing.net/th/id/OIP-C.YU9N_wsKfqzIpJhvJcSWJQAAAA?w=199&h=247&c=7&r=0&o=5&dpr=1.3&pid=1.7> </a> </li>
+  <li> <a href="https://tse4-mm.cn.bing.net/th/id/OIP-C.YU9N_wsKfqzIpJhvJcSWJQAAAA?w=199&h=247&c=7&r=0&o=5&dpr=1.3&pid=1.7"> </a> </li>
 </ul>
