--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>Welcome to Water droplet!</p>
+<p>Welcome to Water-Droplet!</p>
 <p>This is YiDdian's personal website!</p>
 <p>张睿、张琪、陆俊伶是我的室友！</p>
 
