--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <p>This is YiDdian's personal website!</p>
 <p>张睿、张琪、陆俊伶是我的室友！</p>
 
+body{background-image:url("C:\Users\asus\Desktop\QQ图片20230420153255.jpg");background-repeat:no-repeat;background-attachment:fixed;} 
