--- a/index.html
+++ b/index.html
@@ -2,4 +2,16 @@
 <p>This is YiDdian's personal website!</p>
 <p>张睿、张琪、陆俊伶是我的室友！</p>
 
-body{background-image:url("C:\Users\asus\Desktop\QQ图片20230420153255.jpg");background-repeat:no-repeat;background-attachment:fixed;} 
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>网页背景设置</title>
+		<style>
+			body{
+				background-size: 100% ;
+			}
+		</style>
+	</head>
+	<body background="C:\Users\asus\Desktop\QQ图片20230420153255.jpg" >
+	</body>
+</html>
