--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>网页背景设置</title>
+		<title>YiDdian</title>
 		<style>
 			body{
 				background-size: 100% ;
