--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <p>张睿、张琪、陆俊伶是我的室友！</p>
 
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>YiDdian</title>
-		<style>
-			body{
-				background-size: 100% ;
-			}
-		</style>
-	</head>
-	<body background="C:\Users\asus\Desktop\QQ图片20230420153255.jpg" >
-	</body>
+ <head>
+<meta content="text/html" charset="UTF-8">
+<title>YiDdian</title>
+ </head>
+ <body background="C:\Users\asus\Desktop\QQ图片20230420153255.jpg"
+ style="background-repeat:no-repeat
+ background-attachment:fixed;
+ background-size:100% 100%; ">
+ </body>
 </html>
