--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="text/html" charset="UTF-8">
 <title>YiDdian</title>
  </head>
- <body background="C:\Users\asus\Desktop\QQ图片20230420153255.jpg"
+ <body background="背景.jpg"
  style="background-repeat:no-repeat
  background-attachment:fixed;
  background-size:100% 100%; ">
